--- a/src/demo/animate/CloudBallRolling/CloudBallRolling.html
+++ b/src/demo/animate/CloudBallRolling/CloudBallRolling.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>js标签云球形滚动特效代码 - 站长素材</title>
+<title>js标签云球形滚动特效代码</title>
 <link href="css/zzsc.css" rel="stylesheet" type="text/css"   />
 </head>
 <body>
@@ -35,9 +35,5 @@
 </div>
 
 <script src='js/zzsc.js' type="text/javascript"></script>
-<div style="text-align:center;clear:both">
-<p>适用浏览器：IE8、360、FireFox、Chrome、Safari、Opera、傲游、搜狗、世界之窗.</p>
-<p>来源：<a href="http://sc.chinaz.com/" target="_blank">站长素材</a></p>
-</div>
 </body>
 </html>
