--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>特效集锦</title>
+    <link rel="icon" href="favicon.ico"/>
+    <link rel="Bookmark" href="favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="src/assets/css/common.css">
     <link rel="stylesheet" href="src/assets/css/index.css">
     <link rel="stylesheet" href="src/demo/paging/css/pagination.css">
@@ -1112,7 +1115,7 @@
                     </a>
                     <div class="cover-info">
                         <a href="src/demo/ico/ico.html" target="_blank">
-                            <h4> 修改浏览器地址中的小图标  </h4>
+                            <h4> 修改浏览器地址中的小图标 </h4>
                         </a>
                         <small>favicon.ico</small>
                     </div>
