--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                         <img src="static/qrcodeLogo.png">
                     </a>
                     <div class="cover-info">
-                        <a href="src/demo/qrcodeLogo/index.html" target="_blank">
+                        <a href="src/demo/code/qrcodeLogo/index.html" target="_blank">
                             <h4>二维码</h4>
                         </a>
                         <small>利用JavaScript生成二维码并且中间有logo。</small>
@@ -995,6 +995,17 @@
                         <small>全选反选全不选</small>
                     </div>
                 </li>
+                <li>
+                    <a href="src/demo/selectAll/allSelectThi.html" class="thumbnail" target="_blank">
+                        <img src="static/allSelectThi.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/selectAll/allSelectThi.html" target="_blank">
+                            <h4>全选反选和不选</h4>
+                        </a>
+                        <small>自己做的全选反选和不选</small>
+                    </div>
+                </li>
             </ul>
         </div>
         <div id="loadRefresh" class="specialEffectBox">
@@ -1226,5 +1237,11 @@
         $("#Pagination").pagination("8");
     });
 </script>
+<script>
+    window.onload=function(){
+        var botn =document.querySelector("#btn")
+    }
+</script>
+
 </body>
 </html>
