--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
         <li>
             <a href="#animate">动画</a>
         </li>
+        <li>
+            <a href="#tableIcon">表格操作</a>
+        </li>
     </ul>
 </div>
 <!--主体-->
@@ -263,6 +266,17 @@
                             <h4> 多种css3滚动下拉动画加载效果 </h4>
                         </a>
                         <small>多种css3滚动下拉动画加载效果</small>
+                    </div>
+                </li>
+                <li>
+                    <a href="src/demo/gunDPic/offsetLeft/offsetLeft.html" class="thumbnail" target="_blank">
+                        <img src="static/offsetLeft.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/gunDPic/offsetLeft/offsetLeft.html" target="_blank">
+                            <h4>js自动左右轮播，带按钮点击</h4>
+                        </a>
+                        <small>js自动左右轮播，带按钮点击</small>
                     </div>
                 </li>
             </ul>
@@ -1199,6 +1213,22 @@
                             <h4> 超赞页面滚动元素动画jQuery动画库 </h4>
                         </a>
                         <small>aos特效</small>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div id="tableIcon" class="specialEffectBox">
+            <h3 class="h3Title">表格操作</h3>
+            <ul class="spEffUl">
+                <li>
+                    <a href="src/demo/table/table.html" class="thumbnail" target="_blank">
+                        <img src="static/table.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/table/table.html" target="_blank">
+                            <h4> 表格操作-增删排序</h4>
+                        </a>
+                        <small>对表格进行操作-增删排序</small>
                     </div>
                 </li>
             </ul>
