--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
             </ul>
         </div>
         <div id="AlipayCopy" class="specialEffectBox">
-            <h3 class="h3Title">仿淘宝</h3>
+            <h3 class="h3Title">支付宝</h3>
             <ul class="spEffUl">
                 <li>
                     <a href="src/demo/AlipayCopy/index.html" class="thumbnail" target="_blank">
@@ -787,6 +787,18 @@
                             <h4> 仿支付宝 </h4>
                         </a>
                         <small>仿支付宝输入密码，支付</small>
+                    </div>
+                </li>
+
+                <li>
+                    <a href="src/demo/AlipayCopy/password/pay_code.html" class="thumbnail" target="_blank">
+                        <img src="static/passWord.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/AlipayCopy/password/pay_code.html" target="_blank">
+                            <h4> 仿支付宝+明文显示 </h4>
+                        </a>
+                        <small>仿支付宝输入密码 并判断是否显示明文</small>
                     </div>
                 </li>
             </ul>
