--- a/index.html
+++ b/index.html
@@ -871,6 +871,17 @@
                         <small>CSS，Jquery精美进度条和滑动条插件</small>
                     </div>
                 </li>
+                <li>
+                    <a href="src/demo/progressBar/process.html" class="thumbnail" target="_blank">
+                        <img src="static/process.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/progressBar/process.html" target="_blank">
+                            <h4> 鼠标拖动小方块改变div大小 </h4>
+                        </a>
+                        <small>鼠标拖动小方块改变div大小</small>
+                    </div>
+                </li>
             </ul>
         </div>
         <div id="map" class="specialEffectBox">
