--- a/index.html
+++ b/index.html
@@ -1238,6 +1238,17 @@
                         <small>aos特效</small>
                     </div>
                 </li>
+                <li>
+                    <a href="src/demo/animate/ballPump.html" class="thumbnail" target="_blank">
+                        <img src="static/ballPump.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/animate/ballPump.html" target="_blank">
+                            <h4> 打气球 </h4>
+                        </a>
+                        <small> 打气球 </small>
+                    </div>
+                </li>
             </ul>
         </div>
         <div id="tableIcon" class="specialEffectBox">
