--- a/index.html
+++ b/index.html
@@ -386,6 +386,17 @@
                         <small>JS封装类实现年月日三级联动下拉列表。</small>
                     </div>
                 </li>
+                <li>
+                    <a href="src/demo/dropDown/select/index.html" class="thumbnail" target="_blank">
+                        <img src="static/selectMuti.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/dropDown/select/index.html" target="_blank">
+                            <h4>JS封装类实现年月日三级联动下拉列表</h4>
+                        </a>
+                        <small>JS封装类实现年月日三级联动下拉列表。</small>
+                    </div>
+                </li>
             </ul>
         </div>
         <div id="gunDCharacter" class="specialEffectBox">
@@ -1221,6 +1232,7 @@
                         <img src="static/dianZan.png">
                     </a>
                     <div class="cover-info">
+                        <a href="src/demo/animate/animateLike/dianZan.html" target="_blank">
                         <a href="src/demo/animate/animateLike/dianZan.html" target="_blank">
                             <h4> jQuery点赞文字放大特效</h4>
                         </a>
