web:vue的表单全选反选新增删除

--- a/index.html
+++ b/index.html
@@ -839,6 +839,17 @@
                         <small>根据正则表达式判断输入密码手机号是否正确。</small>
                     </div>
                 </li>
+                <li>
+                    <a href="src/demo/vueCheck/add.html" class="thumbnail" target="_blank">
+                        <img src="static/vueCheck.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/vueCheck/add.html" target="_blank">
+                            <h4>vue表单操作</h4>
+                        </a>
+                        <small>vue表单操作</small>
+                    </div>
+                </li>
             </ul>
         </div>
         <div id="paging" class="specialEffectBox">
@@ -1052,6 +1063,17 @@
                             <h4>全选反选和不选</h4>
                         </a>
                         <small>自己做的全选反选和不选</small>
+                    </div>
+                </li>
+                <li>
+                    <a href="src/demo/vueCheck/checkBox.html" class="thumbnail" target="_blank">
+                        <img src="static/vueChecked.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/vueCheck/checkBox.html" target="_blank">
+                            <h4>全选反选</h4>
+                        </a>
+                        <small>vue全选反选</small>
                     </div>
                 </li>
             </ul>
