web:增加div自适应布局

--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
         <li>
             <a href="#tableIcon">表格操作</a>
         </li>
+        <li>
+            <a href="#layout">div布局</a>
+        </li>
     </ul>
 </div>
 <!--主体-->
@@ -1297,6 +1300,22 @@
                             <h4> 表格操作-增删排序</h4>
                         </a>
                         <small>对表格进行操作-增删排序</small>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div id="layout" class="specialEffectBox">
+            <h3 class="h3Title">div布局</h3>
+            <ul class="spEffUl">
+                <li>
+                    <a href="src/demo/layout/index.html" class="thumbnail" target="_blank">
+                        <img src="static/layout.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/layout/index.html" target="_blank">
+                            <h4> div布局</h4>
+                        </a>
+                        <small>五种div自适应布局</small>
                     </div>
                 </li>
             </ul>
