web:canvas文字换行和jq透明蓄水池柱状图

--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
         <li>
             <a href="#layout">div布局</a>
         </li>
+        <li>
+            <a href="#3d">jq图表</a>
+        </li>
+        <li>
+            <a href="#canvas">canvas</a>
+        </li>
     </ul>
 </div>
 <!--主体-->
@@ -1316,6 +1322,38 @@
                             <h4> div布局</h4>
                         </a>
                         <small>五种div自适应布局</small>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div id="3d" class="specialEffectBox">
+            <h3 class="h3Title">图表</h3>
+            <ul class="spEffUl">
+                <li>
+                    <a href="src/demo/3d/index.html" class="thumbnail" target="_blank">
+                        <img src="static/3d.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/3d/index.html" target="_blank">
+                            <h4> 图表 </h4>
+                        </a>
+                        <small>jQuery 3D水池百分比柱形图特效</small>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div id="canvas" class="specialEffectBox">
+            <h3 class="h3Title">canvas</h3>
+            <ul class="spEffUl">
+                <li>
+                    <a href="src/demo/canvas/index.html" class="thumbnail" target="_blank">
+                        <img src="static/canvsText.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/canvas/index.html" target="_blank">
+                            <h4> canvas </h4>
+                        </a>
+                        <small>文字内容换行方式</small>
                     </div>
                 </li>
             </ul>
