--- a/index.html
+++ b/index.html
@@ -956,6 +956,17 @@
                         <small>两个Echart结合到一块。</small>
                     </div>
                 </li>
+                <li>
+                    <a href="src/demo/echarts-migration-master/index.html" class="thumbnail" target="_blank">
+                        <img src="static/canvasMap.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/echarts-migration-master/index.html" target="_blank">
+                            <h4> echarts </h4>
+                        </a>
+                        <small>echart地图迁徙图</small>
+                    </div>
+                </li>
             </ul>
         </div>
         <div id="particles" class="specialEffectBox">
