web:仿房天下swpier并左右拖动楼盘效果

--- a/index.html
+++ b/index.html
@@ -288,6 +288,17 @@
                         <small>js自动左右轮播，带按钮点击</small>
                     </div>
                 </li>
+                <li>
+                    <a href="src/demo/gunDPic/fangFangtianxia/index.html" class="thumbnail" target="_blank">
+                        <img src="static/fangtianxia.jpg">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/gunDPic/fangFangtianxia/index.html" target="_blank">
+                            <h4>仿房天下swiper滚动并js左右拖动</h4>
+                        </a>
+                        <small>仿房天下swiper滚动并js左右拖动</small>
+                    </div>
+                </li>
             </ul>
         </div>
         <div id="picFangDa" class="specialEffectBox">
