web:滑动拼图验证码

--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
         <li>
             <a href="#canvas">canvas</a>
         </li>
+        <li>
+            <a href="#pinTuCode">滑动拼图验证码</a>
+        </li>
     </ul>
 </div>
 <!--主体-->
@@ -1376,6 +1379,22 @@
                             <h4> canvas </h4>
                         </a>
                         <small>文字内容换行方式</small>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div id="pinTuCode" class="specialEffectBox">
+            <h3 class="h3Title">验证码</h3>
+            <ul class="spEffUl">
+                <li>
+                    <a href="src/demo/pinTuCode/index.html" class="thumbnail" target="_blank">
+                        <img src="static/pinTuCode.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/pinTuCode/index.html" target="_blank">
+                            <h4> canvas </h4>
+                        </a>
+                        <small>滑动拼图验证码</small>
                     </div>
                 </li>
             </ul>
