web:echart圆环进度条·

--- a/index.html
+++ b/index.html
@@ -981,6 +981,17 @@
                         <small>echart地图迁徙图</small>
                     </div>
                 </li>
+                <li>
+                    <a href="src/demo/Echarts/echartPie/index.html" class="thumbnail" target="_blank">
+                        <img src="static/echartPie.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/Echarts/echartPie/index.html" target="_blank">
+                            <h4> echarts </h4>
+                        </a>
+                        <small>echart圆环进度条</small>
+                    </div>
+                </li>
             </ul>
         </div>
         <div id="particles" class="specialEffectBox">
