web:地区选择插件

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             <a href="#selectBeat">select美化</a>
         </li>
         <li>
+            <a href="#area">地区</a>
+        </li>
+        <li>
             <a href="#date">日期</a>
         </li>
         <li>
@@ -597,6 +600,44 @@
                 </li>
             </ul>
         </div>
+        <div id="area">
+            <h3 class="h3Title">地区选择</h3>
+            <ul class="spEffUl">
+                <li>
+                    <a href="src/demo/area/city.html" class="thumbnail" target="_blank">
+                        <img src="static/cityChoose.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/area/city.html" target="_blank">
+                            <h4>pc端地区选择插件</h4>
+                        </a>
+                        <small>pc端地区选择插件。</small>
+                    </div>
+                </li>
+                <li>
+                    <a href="src/demo/area/LareaMaster/LareaMaster.html" class="thumbnail" target="_blank">
+                        <img src="static/LareaMaster.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/area/LareaMaster/LareaMaster.html" target="_blank">
+                            <h4>LArea手机端地区选择插件</h4>
+                        </a>
+                        <small>LArea手机端地区选择插件。</small>
+                    </div>
+                </li>
+                <li>
+                    <a href="src/demo/area/city/index.html" class="thumbnail" target="_blank">
+                        <img src="static/city.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/area/city/index.html" target="_blank">
+                            <h4>手机端省市区三级联动</h4>
+                        </a>
+                        <small>手机端省市区三级联动。</small>
+                    </div>
+                </li>
+            </ul>
+        </div>
         <div id="date" class="specialEffectBox">
             <h3 class="h3Title">日期</h3>
             <ul class="spEffUl">
@@ -620,17 +661,6 @@
                             <h4>FullCalendar应用</h4>
                         </a>
                         <small>FullCalendar应用。</small>
-                    </div>
-                </li>
-                <li>
-                    <a href="src/demo/date/LareaMaster/LareaMaster.html" class="thumbnail" target="_blank">
-                        <img src="static/LareaMaster.png">
-                    </a>
-                    <div class="cover-info">
-                        <a href="src/demo/date/LareaMaster/LareaMaster.html" target="_blank">
-                            <h4>LArea手机端地区选择插件</h4>
-                        </a>
-                        <small>LArea手机端地区选择插件。</small>
                     </div>
                 </li>
                 <li>
