web:增加类似抽奖的数字滚动 jqalert弹窗 carouse-tree轮播

--- a/index.html
+++ b/index.html
@@ -185,6 +185,17 @@
                     </div>
                 </li>
                 <li>
+                    <a href="src/demo/gunDPic/carousel-tree/index.html" class="thumbnail" target="_blank">
+                        <img src="static/carousel.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/gunDPic/carousel-tree/index.html" target="_blank">
+                            <h4>bootstrap的carousel-tree轮播图</h4>
+                        </a>
+                        <small>bootstrap的carousel-tree轮播图</small>
+                    </div>
+                </li>
+                <li>
                     <a href="src/demo/gunDPic/scrollThumbnail/scrollThumbnail.html" class="thumbnail" target="_blank">
                         <img src="static/scrollThumbnail.png">
                     </a>
@@ -484,6 +495,18 @@
                         <small>js标签云球形滚动特效代码</small>
                     </div>
                 </li>
+                <li>
+                    <a href="src/demo/digitalRoll/index.html" class="thumbnail"
+                       target="_blank">
+                        <img src="static/digitalRoll.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/digitalRoll/index.html" target="_blank">
+                            <h4> 类似抽奖的数字滚动 </h4>
+                        </a>
+                        <small>类似抽奖的数字滚动</small>
+                    </div>
+                </li>
             </ul>
         </div>
         <div id="mouseOver" class="specialEffectBox">
@@ -754,6 +777,17 @@
                             <h4>轻量级jQuery对话框插件</h4>
                         </a>
                         <small>轻量级jQuery对话框插件 jQuery.dialog.js</small>
+                    </div>
+                </li>
+                <li>
+                    <a href="src/demo/dialogBox/jqAlert/index.html" class="thumbnail" target="_blank">
+                        <img src="static/jqAlert.png">
+                    </a>
+                    <div class="cover-info">
+                        <a href="src/demo/dialogBox/jqAlert/index.html" target="_blank">
+                            <h4>jq弹窗</h4>
+                        </a>
+                        <small>jq弹窗封装</small>
                     </div>
                 </li>
             </ul>
